--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,28 @@
   <title>Weather Forecast</title>
 </head>
 <body>
- 
+  <input type="text">
+  <button>Search</button>
+
+  <div id="results">
+    <p id="location">Concord, NC</p>
+    <img src="https://openweathermap.org/img/wn/10d@4x.png" alt="" id="icon">
+    <p id="current-conditions">Rain</p>
+    <p id="current-temp">90 F</p>
+    <div id="other-info">
+      <p>Feels Like: <span id="feels-like">92</span></p>
+      <p>Humidity: <span id="humidity">97%</span></p>
+      <p>Pressure: <span id="pressure">137</span></p>
+    </div>
+
+    <div class="compass">
+      <div class="direction">
+        <p>NE<span>10 mph</span></p>
+      </div>
+      <div class="arrow"></div>
+    </div>
+
+    <p id="date">July 10, 2020 7:18PM</p>
+  </div>
 </body>
 </html>
